kubernetes/ruby/ruby-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: my-node-web-app
  namespace: my-restaurant
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: node-web-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3500
