kubernetes/ruby/ruby-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ruby-service-ingress
  namespace: my-restaurant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /users
        backend:
          serviceName: ruby-service-svc
          servicePort: 15777
